# New_heroic

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Makefile  README.md  eslint.config.js  index.html  log.txt  opencode.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: covers.py  dependencies.py  diagnostics.py  game_settings.py  games.py  games_v2.py  health.py  installer.py  runners.py  stores.py  sync.py  wine_manager.py
backend/app/core/: config.py  container.py  database.py  game_settings.py  logging.py
backend/app/diagnostics/: engine.py  manager.py  models.py  parser.py  patterns.py
backend/app/installer/: __init__.py  executor.py  manager.py  models.py  parser.py  steps.py
backend/app/models/: game.py  library.py
backend/app/runners/: __init__.py  base.py  manager.py  native.py  proton.py  wine.py  wine_manager.py
backend/app/schemas/: covers.py  diagnostics.py  game.py  game_settings.py  installer.py  runner.py  store.py  wine.py
backend/app/stores/: __init__.py  base.py  callback_server.py  cover_service.py  epic.py  gog.py  manager.py  steam.py
backend/app/sync/: __init__.py  manager.py
backend/data/: games.db
backend/scripts/: cleanup_duplicates.py
backend/tests/: __init__.py  conftest.py  test_health.py
backend/tests/api/: test_games.py  test_installer.py  test_runners.py  test_stores.py  test_wine_manager.py
backend/tests/core/: __init__.py  test_game_settings.py
backend/tests/diagnostics/: test_api.py  (+5 more)
(+52 files in other folders)
