[project]
name = "new-heroic-backend"
version = "0.1.0"
description = "New Heroic game launcher backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "dependency-injector>=4.40.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "asgi-lifespan>=2.0.0",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
